fixed double scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
 /* Ensure the page takes full height */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html, body {
     height: 100%;
     margin: 0;
     display: flex;
     flex-direction: column;
+
 }
 
 /* Main container to ensure full height */
